# cometa

./: .travis.yml  CMakeLists.txt  README.md
include/: cident.h  cometa.hpp
include/cometa/: string.hpp
tests/: cometa_test.cpp
